fixed alignment issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -81,6 +81,7 @@ DARK:     #1A2027
 {
   display: block;
   text-align: center;
+  margin-top: 60px;
 }
 
 @media(min-width:576px){
